--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.password=7c143a6001db73f997842cd7f8ac5af2ed04feed1025459520451
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 logging.level.root = ERROR;
+
+
+#spring.datasource.url=jdbc:mysql://localhost/todo
+#spring.datasource.username=root
+#spring.datasource.password=asdf1234
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.logging.level.org.hibernate.SQL = debug
+#spring.jpa.show-sql = true
